--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@hapi/hapi": "^20.1.4",
-    "nanoid": "^3.1.23"
+    "nanoid": "^3.1.23",
+    "pg": "^8.6.0",
+    "sequelize": "^6.6.4"
   }
 }
